scrolling bug fixed on mobile

--- a/styles/page-new-learning.less
+++ b/styles/page-new-learning.less
@@ -172,7 +172,7 @@
         width: 100%;
         height: 250px;
         white-space: nowrap;
-        overflow-x: hidden;
+        
         overflow-y: hidden;
         -webkit-overflow-scrolling: touch;
 
